--- a/autobus.html
+++ b/autobus.html
@@ -12,12 +12,12 @@
         <h1>Boda de LasRewis</h1>
     </header>
 
-    <p id="entrada">Estamos barajando la posibilidad de contratar un autobús; dependiendo de las personas que lo fuesen a utilizar; saldría desde X a las 11:00 y la vuelta sería al fin de fiesta 23:00.</p>
+    <p id="entrada">Estamos barajando la posibilidad de contratar un autobús; dependiendo de las personas que lo fuesen a utilizar; saldría desde Madrid centro a las 11:00 y la vuelta sería al fin de la fiesta, 23:00.</p>
 
     <!-- Menú lateral -->
     <nav id="side-menu" class="side-menu">
         <ul>
-            <li><a href="boda.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="autobus.html">Autobús</a></li>
             <li><a href="informacion.html">Información sobre la finca y hoteles</a></li>
         </ul>
