--- a/informacion.html
+++ b/informacion.html
@@ -15,7 +15,7 @@
     <!-- Menú lateral -->
     <nav id="side-menu" class="side-menu">
         <ul>
-            <li><a href="boda.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="autobus.html">Autobús</a></li>
             <li><a href="informacion.html">Información sobre la finca y hoteles</a></li>
         </ul>
@@ -32,8 +32,9 @@
     <section class="instructions-container">
         <h2>Hotel</h2>
         <p>
-            Si no os apetece volver hasta casa la noche de nuestra boda, hemos encontrado el hotel más cercano a la finca:
-            <p><strong>Hotel la Roda</strong>.</p>
+            Si no quieres jugártela después del fiestón que nos vamos a pegar, aquí te dejamos la dirección de dos hoteles más cercanos a la finca. Escríbenos un whatsapp cuanto antes para intentar que nos hagan precio como grupo.
+            <p><strong>Hotel la Roda: Plaza Miguel de Cervantes, 6, Villaluenga, 45520, España</strong>.</p>
+            <p><strong>Carlos I de Toledo: Carlos I, 51, Yucos, 45210, España</strong></p>
         </p>
 
         <h3>Instrucciones para llegar a la finca</h2>
@@ -47,7 +48,12 @@
         </p>
         <p>
             Pedid ubicación hasta <strong>Recas, plaza España</strong>. Cuando estéis en la plaza, pedid la ubicación a la finca. 
+        </p>
+        <p>
             <strong>Hacedlo por ese orden</strong>. No pidáis la ubicación a la finca directamente desde vuestra casa.
+        </p>
+        <p>
+            No pidáis la ubicación a la finca directamente desde vuestra casa.
         </p>
         <p>
             Utilizad solo <strong>Google Maps</strong>. No usar <strong>Waze</strong>!!
