--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         <p id="lugar">Finca EntreOlivares, Recas</p>
     </header>
 
+    <!-- Sección destacada con imágenes -->
+    <section class="hero-section">
+        <div class="image-container">
+        <img src="WhatsApp Image 2024-12-18 at 14.28.14 (2).jpeg" alt="Imagen 1" class="hero-image">
+        <img src="WhatsApp Image 2024-12-18 at 14.28.14 (3).jpeg" alt="Imagen 2" class="hero-image">
+    </section>
+
     <p id="confirmacion">Confírmanos tu asistencia lo antes posible, nos ayudarás a una mejor organización; la boda es un sin fin de cosas que hacer y cuanto antes vayamos cerrando cositas mejor.</p>
 
     <!-- Menú lateral -->
